[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["hyoon <hgyoon0928@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
gymnasium = {extras = ["box-2d"], version = "^0.29.1"}
tensorboard = "^2.18.0"
scipy = "^1.14.1"
colorama = "^0.4.6"
numpy = "^2.1.3"
pyyaml = "^6.0.2"
copier = "^9.4.1"
tyro = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
