[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["hyoon <hgyoon0928@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
gymnasium = {extras = ["box2d"], version = "^1.1.0"}
tensorboard = "^2.18.0"
scipy = "^1.14.1"
colorama = "^0.4.6"
numpy = "^2.1.3"
pyyaml = "^6.0.2"
copier = "^9.4.1"
tyro = "^0.9.2"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
tqdm = "^4.67.1"
rich = "^13.9.4"
opencv-python = "^4.11.0.86"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
